--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="icon" href="hng.png" />
+    <link rel="icon" href="./img/hng.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./style.css">
@@ -15,7 +15,7 @@
     <nav id="idea" class="navbar navbar-expand-lg">
         <div class="container">
             <div class="navbar-header">
-                <img src="hng_logo-min.png" alt="logo" class="logo text-center" />
+                <img src="./img/hng_logo-min.png" alt="logo" class="logo text-center" />
             </div>
         </div>
     </nav>
@@ -23,9 +23,9 @@
         <h1>LEADER BOARD</h1>
         <section class="top-rank">
             <h3>Top 3 Interns
-                <img src="./star.svg" />
-                <img src="./star.svg" />
-                <img src="./star.svg" />
+                <img src="./img/star.svg" />
+                <img src="./img/star.svg" />
+                <img src="./img/star.svg" />
             </h3>
 
             <div id="first3">
