--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Leaderboard</title>
     <link rel="icon" href="./img/hng.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <div class="main text-center">
-        <h1>LEADER BOARD</h1>
+        <h1>LEADERBOARD</h1>
         <section class="top-rank">
             <h3>Top 3 Interns
                 <img src="./img/star.svg" />
