--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
-    <nav id="idea" class="navbar navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-header">
-                <img src="./img/hng_logo-min.png" alt="logo" class="logo text-center" />
+
+
+<body data-target="#navbarResponsive">
+    <!-- start home section -->
+    <div id="home">
+        <!-- nav -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <a href="#" class="navbar-brand">LeaderBoard</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+                <div class="collapse navbar-collapse " id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                            <a href="#logout" class="nav-link">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
-        </div>
-    </nav>
-    <div class="main text-center">
-        <h1>LEADERBOARD</h1>
+
+        </nav>
         <section class="top-rank">
             <h3>Top 3 Interns
                 <img src="./img/star.svg" />
