--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </table>
         </section>
 
-        <p>&copy; HNG Interns</p>
+        <p>&copy; 2020 | HNG Board</p>
 
 
         <script src="./script.js"></script>
