--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
             <div class="container">
-                <a href="#" class="navbar-brand">LeaderBoard</a>
+                <a href="#" class="navbar-brand">HNG LeaderBoard</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,10 +37,8 @@
 
         </nav>
         <section class="top-rank">
-            <h3>Top 3 Interns
-                <img src="./img/star.svg" />
-                <img src="./img/star.svg" />
-                <img src="./img/star.svg" />
+            <h3>Overall Best
+
             </h3>
 
             <div id="first3">
@@ -52,7 +50,7 @@
             </div>
         </section>
 
-        <h1 class="ranking">Ranking</h1>
+        <h1 class="ranking">HNGi7 LeaderBoard</h1>
 
         <section class="rank pt-5">
             <table id="userdata">
